Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ $ export FLICKR_SHARED_SECRET="SOMESECRET"
 <h3>
 <a id="all-options" class="anchor" href="#all-options" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>All options:</h3>
 
-<pre><code>&gt; $ flickrage c 
+<pre><code>&gt; $ flickrage help c 
 
 Options:
   -k, --keywords=some nice grapefruit                
