--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Flickrage</h1>
-      <h2 class="project-tagline">Another one Flickr collage maker.</h2>
+      <h2 class="project-tagline">Another one Flickr collage maker CLI.</h2>
       <a href="https://github.com/merqlove/flickrage" class="btn">View on GitHub</a>
       <a href="https://github.com/merqlove/flickrage/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/merqlove/flickrage/tarball/master" class="btn">Download .tar.gz</a>
